<resources>
    <string name="app_name">Budget \nMaster</string>
    <string name="create_new_budget">Create New Budget</string>
    <string name="logo_with_dollar_sign">Logo with Dollar Sign</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="next">NEXT</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="budget_name">Budget Name</string>
    <string name="enter_budget_name">Enter name of budget</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="category">Category</string>
    <string name="amount">Amount ($)</string>
    <string name="note">Add Note (Optional)</string>
    <string name="view_budget">View Budget</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Payor">Payor (Optional)</string>
    <string name="Payee">Payee (Optional)</string>
    <string name="category_name">Category Name</string>
    <string name="budget_planned">Budget Planned</string>
    <string name="budget_spent">Budget Spent</string>
    <string name="remaining">Remaining</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="budget_dollars">Budget $</string>
    <string name="spent_dollars">Spent $</string>
    <string name="remaining_dollars">Remaining $</string>
    <string name="date_here">date here</string>
    <string name="vendor_here">vendor here</string>
    <string name="main_menu">Main Menu</string>
    <string name="expense_transactions">Expense Transactions</string>
    <string name="view_expense_transactions">View Expense Transactions</string>
    <string name="income_transactions">Income Transactions</string>
</resources>
