<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_beige">

    <Button
        android:id="@+id/viewBudgetButton"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="@string/view_budget"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/guidelineh75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineh50" />

    <Button
        android:id="@+id/createNewBudgetButton"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:background="@color/orange"
        android:text="@string/create_new_budget"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/guidelineh50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineh25" />

    <ImageView
        android:id="@+id/logo_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_with_dollar_sign"
        app:layout_constraintBottom_toTopOf="@+id/guidelineh25"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/appNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guidelineh25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinev50"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinev50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:id="@+id/plusSignImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/add_income"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineh75"
        app:srcCompat="@drawable/minus_sign" />

    <ImageView
        android:id="@+id/minusSignImageView"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:onClick="onClick"
        android:contentDescription="@string/add_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinev50"
        app:layout_constraintTop_toTopOf="@+id/guidelineh75"
        app:srcCompat="@drawable/minus_sign" />

    <TextView
        android:id="@+id/addIncomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/plusSignImageView"
        app:layout_constraintEnd_toStartOf="@+id/guidelinev50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineh75" />

    <TextView
        android:id="@+id/addExpenseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/minusSignImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinev50"
        app:layout_constraintTop_toTopOf="@+id/guidelineh75" />

</androidx.constraintlayout.widget.ConstraintLayout>